--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
