--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.511.0",
+    "mongoose": "^8.15.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
