--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^3.0.2",
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "formidable": "^3.5.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
-    "mongoose": "^8.15.1",
+    "mongoose": "^8.16.0",
     "next": "15.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
